Did some commenting, removal of unused imports, etc.